examples/test/testpolicy5528.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5528
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key43: value17
      key12: value30
      key17: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value44
          key40: value21
          key8: value0
      podSelector:
        matchLabels:
          key20: value12
          key35: value34
          key49: value17
